# Forsaken-Souls

./: .gitignore  CMakeLists.txt  Info.plist  README.md
assets/: Icon.icns
assets/atlases/: common_bot.atlas  yseult_medium.atlas
assets/bbd/: animations.bbd  bodies.bbd  boxes.bbd  fonts.bbd  machines.bbd  music.bbd  objects.bbd  sfx.bbd  shaders.bbd  skeletons.bbd  textures.bbd
assets/levels/: level00.lvl  level01.lvl
assets/shaders/: 2D.frag.glsl  2D.vert.glsl  border.frag.glsl  default.frag  default.vert  frag.glsl  fx.vert.glsl  light.frag.glsl  lightFrag.glsl  lightVert.glsl  main_menu.frag.glsl  main_menu.vert.glsl  vert.glsl
assets/skeletons/: common_bot.anim  yseult_medium.anim
cmake/: FindLums.cmake
inc/: Alucard.inc  CommonBot.inc
include/: AI.hpp  AStar.hpp  Animation.hpp  Assets.hpp  Body.hpp  BoxSet.hpp  Camera.hpp  EntitiesData.hpp  Entity.hpp  Game.hpp  GameOver.hpp  Hud.hpp  IEntity.hpp  ImageProvider.hpp  InnerLink.hpp  KeyBinding.hpp  Language.hpp  Level.hpp  LevelManager.hpp  Link.hpp  MainMenu.hpp  Map.hpp  MappedKeys.hpp  PauseMenu.hpp  PauseState.hpp  Physics.hpp  Player.hpp  Screen.hpp  Settings.hpp  SettingsManager.hpp  SettingsMenu.hpp  StateMachine.hpp  Tile.hpp
include/Components/: Actor.hpp  Collidable.hpp  Collider.hpp  Component.hpp  Input.hpp  Movable.hpp  Physics.hpp  Skeleton.hpp  Sprite.hpp  State.hpp  Team.hpp  Transform.hpp
include/Scripts/: Bot.hpp  Yseult.hpp
include/Systems/: Input.hpp  Physics.hpp  RenderSkeleton.hpp  RenderSprite.hpp
include/Translations/: en.inc  fr.inc
map/: links.json
map/level00/: links.json  map00.json  map01.json  map02.json
map/level01/: map00.json
map/level02/: map00.json
meta/animations/: common_bot.json  yseult.json  yseult_god.json  yseult_heavy.json  yseult_light.json  yseult_medium.json
meta/bodies/: common_bot.json  yseult.json  yseult_god.json  yseult_heavy.json  yseult_light.json  yseult_medium.json
meta/boxes/: common_bot.json  yseult_god.json  yseult_heavy.json  yseult_light.json  yseult_medium.json
meta/fonts/: roboto200.json  roboto80.json
meta/machines/: common_bot.json  yseult.json  yseult_god.json  yseult_heavy.json  yseult_light.json  yseult_medium.json
meta/music/: banque1.json  flying_castle_survivors.json  holy_factory_entree.json  ruins_of_the_old_town_survivor.json  underwater_access_2.json  wildpark_dinonaurs.json
meta/objects/: common_bot.json  yseult.json  yseult_god.json  yseult_heavy.json  yseult_light.json  yseult_medium.json
meta/sfx/: footstep_common_bot.json
meta/shaders/: basic2d.json  border.json  light.json
meta/skeletons/: common_bot.json  yseult_god.json  yseult_heavy.json  yseult_light.json  yseult_medium.json
meta/textures/: backgrounds.json  boss_bot.json  common_bot.json  menu_cursor.json  new_game.json  quit.json  tileset.json  tileset_test.json  yseult.json  yseult_god.json  yseult_heavy.json  yseult_light.json  yseult_medium.json
oldmaps/: map00.json  map01.json
oldmaps/level01/: links.json  map01.json  map02.json
oldmaps/oldlevel01/: links.json  map01.json
src/: AI.cpp  Animation.cpp  Assets.cpp  Body.cpp  Boxset.cpp  Camera.cpp  EntitiesData.cpp  Entity.cpp  Game.cpp  GameOver.cpp  Hud.cpp  IEntity.cpp  ImageProvider.cpp  KeyBinding.cpp  Language.cpp  Level.cpp  LevelManager.cpp  Link.cpp  MainMenu.cpp  Map.cpp  MappedKeys.cpp  PauseMenu.cpp  PauseState.cpp  Physics.cpp  Player.cpp  Settings.cpp  SettingsManager.cpp  SettingsMenu.cpp  StateMachine.cpp  Tile.cpp  main.cpp
src/Components/: Actor.cpp  Collidable.cpp  Collider.cpp  Component.cpp  Input.cpp  Movable.cpp  Physics.cpp  Skeleton.cpp  Sprite.cpp  State.cpp  Team.cpp  Transform.cpp
src/Scripts/: Bot.cpp  Yseult.cpp
src/Systems/: Input.cpp  (+3 more)
utils/: build.rb  build_level.rb  build_level_links.rb  build_meta.rb  mkspritesheet.sh
